--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 	<div class="wrapper">
 		<div class="contents">
-			<h1>orem Commit</h1>
+			<h1>Lorem Commit</h1>
 			<img src="https://picsum.photos/600/300" alt="">
 		</div>
 	</div>
