--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<div class="wrapper">
 		<div class="contents">
 
-			<h1>Lorem Commit</h1>
+			<h1>lorem Commit</h1>
 			<img src="https://picsum.photos/600/300" alt="Lorem Alt">
 
 		</div>
